# fastapi_quiz_bot

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .pre-commit-config.yml  Dockerfile  docker-compose.debug.yml  docker-compose.yml  insert_quizzes.sql  pyproject.toml  readme.md  requirements-dev.txt  requirements.txt
.github/workflows/: deploy.yml  test.yml
app/: config.py  database.py  main.py  models.py
app/api/: __init__.py  deps.py
app/api/v1/: __init__.py  auth.py  quiz.py  user.py  webhook.py
app/lib/: schema.py  telegram.py
app/lib/telegram/: schemas.py  telegram.py
app/static/: login.html  quiz.html
tests/: conftest.py  test_quiz.py  test_webhook.py
