[tool.poetry]
name = "fast_api_quiz_bot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "3.9.5"
fastapi = "^0.78.0"
SQLAlchemy = "^1.4.36"
PyMySQL = "^1.0.2"
httpx = "^0.22.0"
uvicorn = "^0.17.6"
pydantic = {extras = ["dotenv"], version = "^1.9.1"}
cryptography = "^37.0.2"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
black = "^22.3.0"
pytest-asyncio = "^0.18.3"
pytest-cov = "^3.0.0"
pre-commit = "^2.19.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
